--- a/Demo/CLImageEditorDemo/CLImageEditorDemo/CLImageEditorDemo-Info.plist
+++ b/Demo/CLImageEditorDemo/CLImageEditorDemo/CLImageEditorDemo-Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Proxima-Nova-Reg.ttf</string>
+		<string>Proxima-Nova-Reg-It.ttf</string>
+		<string>Proxima-Nova-Bold.ttf</string>
+		<string>Proxima-Nova-Bold-It.ttf</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
